<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Remotely</string>

    <string name="remoty">Remoty</string>
    <string name="text">Get your design easily</string>
    <string name="signUpbuttonuser">Sign up as a user</string>
    <string name="signUpbuttondesigner">Sign up as a designer</string>
    <string name="signUpbutton">Sign up</string>
    <string name="signInbutton">Sign In</string>
    <string name="tosignPage">Already have an account? sign In</string>
    <string name="signEdit">sign In</string>
    <string name="signEmailEdit">E-mail</string>
    <string name="signFullNameEdit">Full Name</string>
    <string name="signPasswordEdit">Password</string>
    <string name="signConfirmPassEdit">Confirm Password</string>
    <string name="signPohoneEdit">Phone Number</string>
    <string name="DessEdit">Descripe yourself</string>
    <string name="app_name2">RemotyApplication</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>

    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

    <string name="forgetText">We just need your registed email to send Reset password instructions</string>
    <string name="resetPass">RESET PASSWORS</string>
    <string name="action_accepted">Accept </string>
    <string name="action_rejcted">Reject</string>
    <string name="action_details">Details</string>
    <string name="backdrop_title">Users products</string>
    <string name="backdrop_subtitle">Work Hard</string>
    <string name="forgetPass">Forget Password ? </string>
    <string name="backButton">Back</string>
    <string name="add_step_here">Add step here</string>
    <string name="user">User</string>
    <string name="freelancer_company">Designer</string>
    <string name="consltant">Consltant</string>
    <string name="designer_profile">Designer profile</string>
    <string name="portfolio_link">Portfolio Link</string>
    <string name="request">Request</string>
    <string name="consult">consult</string>
    <string name="request_product">Request product</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="upload_file">Upload File</string>
    <string name="submit2">submit</string>
    <string name="selectedPgePos">Selected page position:</string>
    <string name="designer_desc">Write about your self or add portflio link</string>
    <string name="product_nameDetails">Product Name :</string>
    <string name="product_detailsD">Product Details :</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>


</resources>
