<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@drawable/applicationbackground">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/appLogo"
        android:src="@drawable/logoapp"
        android:paddingBottom="26dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remoty"
        android:paddingBottom="1dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textAllCaps="true"
        android:paddingBottom="26dp"
        android:paddingTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/signUpbuttondesigner"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:id="@+id/SignUpDesignerBtn1"/>

    <Button
        android:id="@+id/signUpUserBtn2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/signUpbuttonuser"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/tosignPage"
        android:id="@+id/tosignPage"
        android:paddingTop="20dp"/>



</LinearLayout>